<resources>
    <string name="app_name">Assignment 2</string>
    <string name="profile_logo">profile logo</string>
    <string name="contact_name">Contact Name</string>
    <string name="msg">Hi how are you</string>
    <string name="time">8:54 AM</string>
    <string name="count">123</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="logo">logo</string>
</resources>